# Statistical_Arbitrage_Stanford_MS-E244

./: .gitignore  requirements.txt
project/: .gitignore  README.md  equity_skew.md  equity_skew_sp500.md  project_prompt.md  pyproject.toml  readme.md
project/notebooks/: construct_vol_surface.ipynb  data_visualization.ipynb  init_eda.ipynb
project/old/src/: config.py  construct_skew.py  option_skew_strategy.py  pairs_trading_skew.py  sector_pairs_trading_skew.py  simple_strat.py
project/pipeline/: back_to_basics.ipynb  config.py  factory.py  interfaces.py  pipeline.py  testing.ipynb
project/pipeline/analytics/: backtest_models.py  signal_models.py  skew_models.py  volatility_models.py  walk_forward.py
project/pipeline/backtest_models/: modules.py
project/pipeline/data/: data_loader.py
project/pipeline/data_processing/: modules.py
project/pipeline/signal_models/: modules.py
project/pipeline/skew_models/: modules.py
project/pipeline/sondre/: sector_pairs_trading_skew.py  sondre.ipynb
project/pipeline/volatility_models/: model.py  modules.py
project/plots/: coint_pairs.tex  coint_sector.tex
project/presentation/: presentation.tex  presentation_outline.md
project/proposal/: project_prompt.md  swaption_skew.md
project/report/: report.tex
project/src/: backtest1.py  cointegration_test.py  config.py  construct_skew.py  data_explorer.py  data_loader.py  drill_analytics.py  load.py  option_skew_strategy.py  pairs_trading_skew.py  play.py  run.py  run_strategy.py  sector_pairs_trading_skew.py  simple_strat.py  volatility_surface_generator.py
(+41 files in other folders)
