[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb"
version = "0.1.0"
description = "Statistical arbitrage project"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
