[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stat-arb"
version = "0.1.0"
description = "Statistical arbitrage project"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "numpy",
    "duckdb",
    "torch",
    "matplotlib",
    "pillow",
    "tqdm",
]

[project.scripts]
ssvi-run = "src.strategies.ssvi.run:main"
ssvi-dashboard = "src.strategies.ssvi.dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
